--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "event-perk-grid",
   "version": "0.0.0",
   "description": "A utility for reading and displaying Event Perk Grids.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist/src/**/*"
   ],
   "repository": {
     "type": "git",
@@ -19,36 +19,43 @@
   },
   "homepage": "https://github.com/tildeio/event-perk-grid#readme",
   "scripts": {
+    "prebuild": "yarn clean",
+    "build:dev": "webpack --mode='development' -c webpack.tests.config.js",
+    "build": "tsc",
     "lint:js": "eslint .",
     "lint:js:fix": "eslint . --fix",
     "lint:prettier": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --continue-on-error lint:*:fix",
-    "test": "jest --config jestconfig.js",
-    "build": "tsc",
-    "preversion": "yarn lint && yarn test",
+    "test": "testem",
+    "clean": "rm -rf dist",
+    "preversion": "yarn lint && yarn build && yarn test",
     "prepare": "yarn build",
     "postversion": "git push --tags && yarn publish . --tag $npm_package_version && git push && echo \"Successfully released version $npm_package_version!\""
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
+    "@types/qunit": "^2.11.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^26.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-qunit": "^7.2.0",
     "eslint-plugin-unicorn": "^40.1.0",
-    "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "^4.5.5"
+    "qunit": "^2.17.2",
+    "testem": "^3.6.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   },
   "volta": {
     "node": "14.18.3",
