--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
+    "socket.io": "^4.4.1",
     "testem": "^3.6.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
