--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
+    "qunit-dom": "^2.0.0",
     "style-loader": "^3.3.1",
     "testem": "^3.6.0",
     "ts-loader": "^9.2.6",
