Export custom-element registration code separate from index

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.0",
   "description": "A utility for reading and displaying Event Perk Grids.",
   "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js",
+    "./custom-element": "./dist/custom-element.js"
+  },
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*"
