--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.4.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
     "testem": "^3.6.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
