--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
       "import": "./dist/custom-element.js"
     }
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "files": [
     "dist/**/*"
   ],
