--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.6.0",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
