--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "exports": {
     ".": "./dist/index.js",
-    "./custom-element": "./dist/custom-element.js"
+    "./custom-element": "./dist/custom-element.js",
+    "./index.css": "./dist/index.css"
   },
   "types": "dist/index.d.ts",
   "files": [
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -56,6 +58,7 @@
     "eslint-plugin-qunit": "^7.2.0",
     "eslint-plugin-unicorn": "^40.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.3",
     "msw": "^0.36.8",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
