--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-public/mockServiceWorker.js
+tests/mockServiceWorker.js
 
 ################################################################################
 # Everything below this point is the same as .gitignore
