--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "lint:fix": "npm-run-all --continue-on-error lint:*:fix",
     "start": "webpack serve --open --mode development -c webpack.tests.config.js",
     "test": "testem",
-    "preversion": "yarn lint && yarn build && yarn test",
-    "prepare": "yarn build"
+    "preversion": "yarn lint && yarn build && yarn test && yarn docs",
+    "prepare": "yarn build",
+    "docs": "typedoc"
   },
   "devDependencies": {
     "@types/dotenv-webpack": "^7.0.3",
@@ -69,6 +70,7 @@
     "stylelint-config-standard": "^25.0.0",
     "testem": "^3.6.0",
     "ts-loader": "^9.2.6",
+    "typedoc": "^0.22.11",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
