--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/tildeio/event-perk-grid/issues"
   },
-  "homepage": "https://github.com/tildeio/event-perk-grid#readme",
+  "homepage": "https://tildeio.github.io/event-perk-grid",
   "scripts": {
     "build:test": "webpack --mode development -c webpack.tests.config.js",
     "build:testem": "TESTEM=true webpack --mode development -c webpack.tests.config.js",
