--- a/docs/package.json
+++ b/docs/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-qunit": "^7.2.0",
     "event-perk-grid": "file:..",
     "loader.js": "^4.7.0",
+    "modern-normalize": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "qunit": "^2.17.2",
