--- a/docs/package.json
+++ b/docs/package.json
@@ -33,6 +33,7 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "broccoli-funnel": "^3.0.8",
     "ember-auto-import": "^2.2.4",
     "ember-cli": "~4.1.1",
     "ember-cli-app-version": "^5.0.0",
