--- a/docs/package.json
+++ b/docs/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-qunit": "^7.2.0",
     "event-perk-grid": "file:..",
     "loader.js": "^4.7.0",
+    "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
