--- a/docs/package.json
+++ b/docs/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-qunit": "^7.2.0",
     "event-perk-grid": "file:..",
+    "highlight.js": "^11.4.0",
     "loader.js": "^4.7.0",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
