--- a/.prettierignore
+++ b/.prettierignore
@@ -8,6 +8,7 @@
 
 # Generated files
 tests/mockServiceWorker.js
+CHANGELOG.md
 
 ################################################################################
 # Everything below this point is the same as .gitignore
